# ChangeLog for games-strategy/warzone2100
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/warzone2100/ChangeLog,v 1.43 2010/06/21 20:11:51 maekke Exp $

  24 Jun 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> -warzone2100-2.2.4.ebuild,
  warzone2100-2.3.0.ebuild, warzone2100-2.3.1.ebuild,
  +files/warzone2100-2.3.1-include-SDL.patch:
  Added patch so that #include <SDL.h> is used instead of #include
  <SDL/SDL_*.h>, fixing compilation under portage-multilib. Dropped old
  warzone2100.2.2.4.ebuild.

  21 Jun 2010; Markus Meier <maekke@gentoo.org> warzone2100-2.3.0.ebuild:
  amd64/x86 stable, bug #322435

*warzone2100-2.3.1 (14 Jun 2010)

  14 Jun 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +warzone2100-2.3.1.ebuild:
  version bump

  28 Apr 2010; Michael Sterrett <mr_bones_@gentoo.org>
  warzone2100-2.3.0.ebuild:
  use the higher quality videos (bug #317283)

*warzone2100-2.3.0 (25 Apr 2010)

  25 Apr 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +warzone2100-2.3.0.ebuild:
  version bump

  23 Jan 2010; Brent Baude <ranger@gentoo.org> warzone2100-2.2.4.ebuild:
  stable ppc, bug 296688

  29 Dec 2009; Markus Meier <maekke@gentoo.org> warzone2100-2.2.4.ebuild:
  x86 stable, bug #296688

  28 Dec 2009; Richard Freeman <rich0@gentoo.org> warzone2100-2.2.4.ebuild:
  amd64 stable - 296688

*warzone2100-2.2.4 (12 Oct 2009)

  12 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +warzone2100-2.2.4.ebuild:
  version bump

*warzone2100-2.2.3 (14 Sep 2009)

  14 Sep 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +warzone2100-2.2.3.ebuild:
  version bump

*warzone2100-2.2.2 (26 Aug 2009)

  26 Aug 2009; Tristan Heaven <nyhm@gentoo.org> +warzone2100-2.2.2.ebuild:
  Version bump

  16 Jul 2009; Tristan Heaven <nyhm@gentoo.org> warzone2100-2.2.1.ebuild:
  Depend on dev-games/physfs with zip enabled, bug #277288

*warzone2100-2.2.1 (01 Jul 2009)
