@@ -6,14 +6,17 @@ DIST warzone2100-2.3.0-videos.wz 571937134 RMD160 7350fa47b0dc0db631ad22763039e2
 DIST warzone2100-2.3.0.tar.gz 48738273 RMD160 ad766fc7ea2b80e2fef396a51332bf8179b8e91b SHA1 98429aaf04b7ccc81fead97ec438cdf6f83ef48e SHA256 f2a7123216f9bca79ce7d8cfdda967574788d770fee3539a5d48f748cdd33182
 DIST warzone2100-2.3.1-videos.wz 571937134 RMD160 7350fa47b0dc0db631ad22763039e29bf420a847 SHA1 7ade8edd200afee3e4a675d1a5b739b32e574916 SHA256 142ae905be288cca33357a49f42b884c190e828fc0b1b1773ded5dff774f41a3
 DIST warzone2100-2.3.1.tar.gz 52987292 RMD160 fb3a39b39c5433c81925800f3692334b1a9b2f34 SHA1 e1d99cd3aff195b2bb0ad95d7c805f400438821d SHA256 56995d465250f5007a3acaf7ffae566bfa93bad719c5b07f7f726a136ac97516
+DIST warzone2100-2.3.3.tar.gz 53128477 RMD160 21b6abe90c3547185a571823e5672c0ffb300340 SHA1 5906d362969e982b5308c0ba6c998f879dd37e6a SHA256 0bee40e2a72341929c8808fe44dd1dd50c8ca198526784efe051dda94cec0440
+DIST warzone2100-videos-2.2.wz 571937134 RMD160 7350fa47b0dc0db631ad22763039e29bf420a847 SHA1 7ade8edd200afee3e4a675d1a5b739b32e574916 SHA256 142ae905be288cca33357a49f42b884c190e828fc0b1b1773ded5dff774f41a3
 EBUILD warzone2100-2.3.0.ebuild 1846 RMD160 1376c328ec5d5f59e23d515125c726b61edfd1e2 SHA1 f5d9fa93fc80a1f46f5c761427676a2dbd796c8d SHA256 2fa25778dc1b8e13fa8be0d0d424b4450eb6032ea11ae973437b40046f865492
 EBUILD warzone2100-2.3.1.ebuild 1844 RMD160 f53f6f3a8a0fdef16e802226d05acd0339cf0e8c SHA1 3904f6a6a6d74e47190af27cce5e393eb2d0eb54 SHA256 d2870c7d5b77a80e52720ec7df891c52ecc55f23ed87c389974d6d00184899fe
-MISC ChangeLog 6923 RMD160 9d03672e98692206c6a9098c65c413ae6e9ccbbc SHA1 9d1589b6eb4d6c39dde9e0c17fec8dacdd2deba1 SHA256 f53615d4a3061d136a49c7181429baa32a641047e8fa2a6c0fa3adc54ce9c0f4
+EBUILD warzone2100-2.3.3.ebuild 1888 RMD160 a6cbe913ef2a711870e01232bec9b11ee5001eaf SHA1 0707ec18cbb89fb50f0cbc8275b1e84b99c083c2 SHA256 1d0eb3a8cc43f5b0f88c7230a1f74379f777bbbbcc6169234dfe81982c95ae6d
+MISC ChangeLog 7061 RMD160 4ad4fd3b8b4f666be8cb9d94a69860541a206631 SHA1 1ebd04c28708ab6a639b8ee1511c12c2d0282ccc SHA256 e0a382e5da1859034938803c42b4f4f2bc0a159f5206311bae9c3a5b5d0ee144
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkwivX0ACgkQni8M22OVw8AmOACgl2CcAXMo+4g2iRaZ67aOmRX4
-iggAnjnbl/94viOjxHaiVZYWVZ8EdPzy
-=C9TX
+iEYEARECAAYFAkxmMrwACgkQni8M22OVw8CwiACgriePToOWiNe6d2QiM6pv9hnJ
+su0An2GimGiJLpGWOITvi5paG+CquG0X
+=ayTg
 -----END PGP SIGNATURE-----
